<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linlay">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/new_wall_instructions"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_wall_name_label"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/new_wall_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_wall_name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white_light"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/new_wall_number_label"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/new_wall_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_wall_number_hint"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white_light"
                android:theme="@style/MyEditTextTheme" />

        </LinearLayout>

        <Button
            android:id="@+id/new_wall_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/new_wall_next_button"
            android:textColor="@color/white"
            android:layout_below="@+id/linlay"/>

    </RelativeLayout>

</LinearLayout>